Probably fixed shifting to the left slightly error by wrapping App in bootstrap container

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.App.container {
+  max-width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .overall-component-div {
   display: flex;
 }
